@@ -3,8 +3,8 @@ Type: Package
 Title: Bivariate Normal Home Range SECR
 Version: 1.3.0
 Depends: R (>= 3.2.0), secr
-Imports: mvtnorm, geoR, sp, rgeos
-Suggests: MASS, knitr
+Imports: mvtnorm, sp
+Suggests: MASS, knitr, geoR, rgeos
 VignetteBuilder: knitr
 Date: 2022-10-11
 Author: Murray Efford
