@@ -7,8 +7,8 @@ importFrom ("mvtnorm", "dmvnorm")
 importFrom ("utils", "packageDescription")
 importFrom ("utils", "packageVersion")
 importFrom ("sp", "Polygon", "Polygons", "SpatialPolygons")
-importFrom ("geoR", "coords.aniso")
-importFrom ("rgeos", "gIntersection")
+# importFrom ("geoR", "coords.aniso")
+# importFrom ("rgeos", "gIntersection")
 export (simpopn.bvn)
 export (simcapt.bvn)
 export (plotpopn.bvn)
