@@ -1,10 +1,11 @@
 Changes in version 1.3.0 (2022-10-11)
 
 New features or changed behaviour of old functions
-    o   none
+    o   runEllipsesim() may generate new random traps at each replicate
     
 Other    
     o   removed cluster code (multithreading in secr.fit)    
+    o   geoR and rgeos now suggested 
 
 Changes in version 1.2.3 (2018-08-14)
 
